--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section id="hero">
         <div class="hero-container">
             <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt=""></a>
-            <h1 data-aos="zoom-in">BILIA</h1>
-            <h2 data-aos="fade-up">Primera Bienal de Inteligencia Artificial y Arte</h2>
-            <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
+            <h1 data-aos="zoom-in">BILIA 2022</h1>
+            <h2 data-aos="fade-up">Bienal Latinoamericana de Inteligencia Artificial y Arte</h2>
+            <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Descubre más</a>
         </div>
     </section>
     <!-- End Hero -->
@@ -58,32 +58,14 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">Sobre BILIA</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Qué es</a></li>
-                    <li><a class="nav-link scrollto " href="#portfolio">Obras</a></li>
+                    <li><a class="nav-link scrollto active" href="#hero">CARTEL</a></li>
+                    <li><a class="nav-link scrollto" href="#about">BILIA</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Programa</a></li>
+                    <li><a class="nav-link scrollto " href="#portfolio">OBRAS</a></li>
                     <li><a class="nav-link scrollto" href="#team">Artistas</a></li>
-                    <li><a class="nav-link scrollto" href="#pricing">Streaming</a></li>
-                    <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="nav-link scrollto" href="#contact">Quienes</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
+                    <li><a class="nav-link scrollto" href="#pricing">OFERTA ACADÉMICA</a></li>
+                    <li><a class="nav-link scrollto" href="#contact">CONTACTO</a></li>
+
             </nav>
             <!-- .navbar -->
 
@@ -97,10 +79,6 @@
         <section id="about" class="about">
             <div class="container">
 
-                <div class="section-title" data-aos="fade-up">
-                    <h2>Sobre BILIA</h2>
-                    <p>Magnam dolores commodi suscipit eius consequatur</p>
-                </div>
 
                 <div class="row">
                     <div class="col-lg-6" data-aos="fade-right">
@@ -110,19 +88,14 @@
                     </div>
                     <div class="col-lg-6" data-aos="fade-left">
                         <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-                            <h3>Voluptatem dignissimos provident quasi corporis</h3>
-                            <p class="fst-italic">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            <h2>BILIA 2022</h2>
+                            <p>
+                                BILIA es la primera Bienal de Arte Latinoamericana enfocada en el arte contemporáneo creado con Inteligencia Artificial. Nuestra misión es explorar posibilidades de futuros y nuevas narrativas a partir de una colaboración hombre-máquina. Presentamos a
+                                artistas nacionales e internacionales que están produciendo obras revolucionarias relacionadas con la IA y las artes visuales. (pintura, escultura, arte sonoro, animación) Acompañado de una serie de talleres, masterclasses
+                                y conferencias a cargo de expertos en Ciencia, Arte e IA en una modalidad online y presencial.
                             </p>
                             <ul>
-                                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                            </ul>
-                            <p>
-                                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                                id est laborum
-                            </p>
+
                         </div>
                     </div>
                 </div>
@@ -136,31 +109,36 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>Qué es</h2>
-                    <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
+                    <h2>PROGRAMA</h2>
+                    <p>martes 05 a domingo 10 de abril 2022</p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 order-2 order-lg-1">
                         <div class="icon-box mt-5 mt-lg-0" data-aos="fade-up">
-                            <i class="bx bx-receipt"></i>
-                            <h4>Est labore ad</h4>
-                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                            <i class="bx bx-cube-alt"></i>
+                            <h4>Galería</h4>
+                            <p>Tenemos el gusto de presentar una cautivante selección de los trabajos contemporáneos más interesantes en la escena de Inteligencia Artificial en el arte Latinoamericano. </p>
                         </div>
                         <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="100">
                             <i class="bx bx-cube-alt"></i>
-                            <h4>Harum esse qui</h4>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                            <h4>Clases Maestras</h4>
+                            <p>Experiencias únicas de aprendizaje condensado y masterizado compartido por expertos en el área para obtenerresultados sobresalientes.</p>
                         </div>
                         <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="200">
-                            <i class="bx bx-images"></i>
-                            <h4>Aut occaecati</h4>
-                            <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                            <i class="bx bx-cube-alt"></i>
+                            <h4>Charlas y Talleres</h4>
+                            <p>Para entender el contexto y ecosistema de Inteligencia Artificial en la actualidad, acompañado de talleres teórico / practico que permitirán al aprendiz, hacer uso de estas herramientas.</p>
                         </div>
                         <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
-                            <i class="bx bx-shield"></i>
-                            <h4>Beatae veritatis</h4>
-                            <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                            <i class="bx bx-cube-alt"></i>
+                            <h4>Experiencia Sonora</h4>
+                            <p>Dos noches especiales con paisajes sonoros y propuestas audiovisuales fuera de lo ordinario, que buscan trasladarnos a loas ambientes de las obras.</p>
+                        </div>
+                        <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="400">
+                            <i class="bx bx-cube-alt"></i>
+                            <h4>Drop NFT colectivo LATAM</h4>
+                            <p>Actividad para realizar obras de arte con Inteligencia Artificial y alojarlas en la Blockchain como NFT's. </p>
                         </div>
                     </div>
                     <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/services.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
